# Rust_Security_Camera

./: Cargo.toml  README.md
src/: list_of_components.txt  main.rs
src/controller/: mod.rs
src/controller/camera/: capture.rs  logging.rs  mod.rs  storage.rs
src/controller/led/: led_controller.rs
src/controller/security/: secure_pattern_generator.rs
src/tuning/: secure_pattern_parameters.toml
utils/: copy_dll_files_from_vcpkg_to_target.bat
