[package]
name = "Rust_Security_Camera"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = "0.86.0"
# opencv = { version = "0.86.0", features = ["buildtime-bindgen", "opencv-4"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"

[build-dependencies]
opencv = "0.86.0"
# opencv = { version = "0.86.0", features = ["buildtime-bindgen"] }
